@startuml

title __CONTROLLER's Class Diagram__\n

  package com.jensui.projects.fade {
    package com.jensui.projects.fade.controller {
      class FileListController {
      }
    }
  }
  

  package com.jensui.projects.fade {
    package com.jensui.projects.fade.controller {
      class FileTableController {
          - logger : Logger
          + FileTableController()
          + mouseClicked()
          + mouseEntered()
          + mouseExited()
          + mousePressed()
          + mouseReleased()
          + keyPressed()
          + keyReleased()
          + keyTyped()
          + valueChanged()
      }
    }
  }
  

  package com.jensui.projects.fade {
    package com.jensui.projects.fade.controller {
      class FileTreeController {
          + FileTreeController()
          + mouseClicked()
          + mouseEntered()
          + mouseExited()
          + mousePressed()
          + mouseReleased()
          + treeNodesChanged()
          + treeNodesInserted()
          + treeNodesRemoved()
          + treeStructureChanged()
          + valueChanged()
          + keyPressed()
          + keyReleased()
          + keyTyped()
      }
    }
  }
  

  FileTableController -up-|> MouseListener
  FileTableController -up-|> KeyListener
  FileTableController -up-|> ListSelectionListener
  FileTableController o-- IExplorerComponent : c
  FileTreeController -up-|> MouseListener
  FileTreeController -up-|> KeyListener
  FileTreeController -up-|> TreeModelListener
  FileTreeController -up-|> TreeSelectionListener
  FileTreeController o-- IExplorerComponent : c


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
